Add public module
