# src/internal/controller/order_controller.go
@@ -5,8 +5,6 @@ import (
 	"gitlab.id.vin/vincart/golib-sample-adapter/service"
 	"gitlab.id.vin/vincart/golib-sample-core/exception"
 	"gitlab.id.vin/vincart/golib-sample-internal/resource"
-	baseEx "gitlab.id.vin/vincart/golib/exception"
-	"gitlab.id.vin/vincart/golib/web/log"
 	"gitlab.id.vin/vincart/golib/web/response"
 	"strconv"
 )
@@ -37,30 +35,6 @@ func (s OrderController) GetOrder(c *gin.Context) {
 		return
 	}
 	entity, err := s.orderService.GetById(c, id)
-	if err != nil {
-		response.WriteError(c.Writer, err)
-		return
-	}
-	response.Write(c.Writer, response.Ok(resource.NewOrder(entity)))
-}
-
-// CreateOrder
-// @Summary Create order
-// @Tags OrderController
-// @Accept  json
-// @Produce  json
-// @Security BasicAuth
-// @Success 200 {object} response.Response{data=resource.Order}
-// @Failure 500 {object} response.Response
-// @Router /v1/orders [post]
-func (s OrderController) CreateOrder(c *gin.Context) {
-	var body resource.CreateOrderRequest
-	if err := c.ShouldBindJSON(&body); err != nil {
-		log.Warn(c, "Cannot bind request body, err [%s]", err)
-		response.WriteError(c.Writer, baseEx.BadRequest)
-		return
-	}
-	entity, err := s.orderService.Create(c, body.ToEntity())
 	if err != nil {
 		response.WriteError(c.Writer, err)
 		return
