# src/public/docs/swagger.yaml
@@ -1,4 +1,9 @@
 definitions:
+  resource.CreateOrderRequest:
+    properties:
+      total_amount:
+        type: integer
+    type: object
   resource.Order:
     properties:
       created_at:
@@ -7,11 +12,8 @@ definitions:
         type: integer
       total_amount:
         type: integer
-    type: object
-  resource.Status:
-    properties:
-      http_code:
-        type: integer
+      user_id:
+        type: string
     type: object
   response.Meta:
     properties:
@@ -28,13 +30,20 @@ definitions:
     type: object
 info:
   contact: {}
-  title: Sample internal API
+  title: Sample Public API
   version: 1.0.0
 paths:
   /v1/orders:
     post:
       consumes:
       - application/json
+      parameters:
+      - description: Request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/resource.CreateOrderRequest'
       produces:
       - application/json
       responses:
@@ -52,7 +61,7 @@ paths:
           schema:
             $ref: '#/definitions/response.Response'
       security:
-      - BasicAuth: []
+      - BearerAuth: []
       summary: Create order
       tags:
       - OrderController
@@ -83,42 +92,13 @@ paths:
           schema:
             $ref: '#/definitions/response.Response'
       security:
-      - BasicAuth: []
+      - BearerAuth: []
       summary: Get order by ID
       tags:
       - OrderController
-  /v1/statuses/{code}:
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - description: status code
-        in: path
-        name: code
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/resource.Status'
-              type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Response'
-      security:
-      - BasicAuth: []
-      summary: API return status code
-      tags:
-      - StatusController
 securityDefinitions:
-  BasicAuth:
-    type: basic
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
